--- a/package.json
+++ b/package.json
@@ -22,11 +22,25 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-fastify": "^7.6.5",
+    "@nestjs/terminus": "^7.0.1",
+    "@nestjs/typeorm": "^7.1.5",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "dotenv": "^8.2.0",
+    "fastify-helmet": "^5.1.0",
+    "fastify-multer": "^2.0.2",
+    "firebase": "^8.2.2",
+    "firebase-messaging": "^1.0.6",
+    "mongodb": "^3.6.3",
+    "nestjs-rate-limit": "^1.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
