--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-fastify": "^7.6.5",
+    "@nestjs/platform-socket.io": "^7.6.5",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^7.6.5",
+    "@types/redis": "^2.8.28",
+    "@types/socket.io-redis": "^1.0.26",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
@@ -37,10 +42,13 @@
     "firebase-messaging": "^1.0.6",
     "mongodb": "^3.6.3",
     "nestjs-rate-limit": "^1.1.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "typeorm": "^0.2.29"
+    "socket.io-redis": "^6.0.1",
+    "typeorm": "^0.2.29",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
